--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,67 @@
-config.py
-firebase_key.json
-*.env
-storage/data/*
-storage/temp/*
-  __pycache__/
-  *.pyc
+# Python
 __pycache__/
-config.py
-firebase_key.json
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-node_modules
+# Virtual Environment
+venv/
+env/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Cache
+cache/
+*.pkl
+*.pkl.backup
+*.pkl.backup2
+*.pkl.backup3
+*.pkl.backup4
+*.pkl.backup5
+*.pkl.backup6
+
+# Data files
+*.json.backup*
+chroma_db/
+storage/
+converted/
+
+# Firebase
+firebase_key.json
+*.key
+
+# Temporary files
+temp/
+*.tmp
+
+# Korean file names (backup files)
+*.backup
