--- a/requirements.txt
+++ b/requirements.txt
@@ -27,17 +27,17 @@ distro==1.9.0
 durationpy==0.10
 fastapi==0.115.13
 filelock==3.18.0
-firebase-admin==6.9.0
+firebase-admin>=6.0.0
 flatbuffers==25.2.10
-flet==0.28.3
+flet>=0.21.0
 flet-cli==0.28.3
 flet-desktop==0.28.3
 flet-web==0.28.3
-flet-webview==0.1.0
+flet-webview>=0.1.0
 frozenlist==1.7.0
 fsspec==2025.5.1
 future==1.0.0
-geocoder==1.38.1
+geocoder>=1.38.1
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
 google-api-python-client==2.173.0
@@ -47,7 +47,7 @@ google-cloud-core==2.4.3
 google-cloud-firestore==2.21.0
 google-cloud-storage==3.1.1
 google-crc32c==1.7.1
-google-generativeai==0.8.5
+google-generativeai>=0.3.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 greenlet==3.2.3
@@ -74,12 +74,14 @@ jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 kubernetes==33.1.0
-langchain==0.3.26
+langchain==0.2.0
 langchain-chroma==0.2.4
-langchain-community==0.3.26
+langchain-community==0.2.0
 langchain-core==0.3.66
+langchain-google-genai>=0.1.0
 langchain-openai==0.3.27
 langchain-text-splitters==0.3.8
+langgraph>=0.5.0
 langsmith==0.4.4
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -90,7 +92,7 @@ mpmath==1.3.0
 msgpack==1.1.1
 multidict==6.6.2
 mypy_extensions==1.1.0
-numpy==2.3.1
+numpy>=1.24.0
 oauthlib==3.3.1
 onnxruntime==1.22.0
 opentelemetry-api==1.34.1
@@ -117,7 +119,7 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
 pyparsing==3.2.3
-pypdf==5.7.0
+pypdf>=3.17.0
 PyPika==0.48.9
 pypng==0.20220715.0
 pyproject_hooks==1.2.0
@@ -126,7 +128,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-slugify==8.0.4
 PyYAML==6.0.2
-qrcode==7.4.2
+qrcode>=7.4.0
 ratelim==0.1.6
 referencing==0.36.2
 regex==2024.11.6
